 $Id: ChangeLog,v 1.131.2.25.2.38 2010/02/03 10:09:22 uehira Exp $

2010-02-03  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* configure.in : check sys/mtio.h (for fromtape, rtape, wtape).
	If sys/mtio.h does not exist, these programs are not compiled
	(ex. Mac OS X 10.6).
	* src/raw2mon : check buffer overflow.

2010-02-02  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/insert_raw : 64 bit clean?
	* src/win_system.c : merged into src/winlib.c
	* src/win_system.h : merged into src/winlib.h
 	* Version 2.0.9 released.

2010-01-12  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/winlib.c, src/winadd.c, src/wdiskts : bcd2time()-->bcd_t(), time2bcd()-->t_bcd()

2010-01-04  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/wdiskts : 64 bit clean?
	* src/winlib.h : introduced macro: WIN_YEAR.

2009-12-26  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/winlib.c : added get_sysch() [moved from win_system.c], t_bcd(), bcd_t(), bcd2time(), time2bcd(), time_cmpq()
	* src/winlib_log.c : created. added find_oldest().

2009-12-25  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* MF head.
	* src/relaym.c : bug fixed.
	* Version 2.0.8 released.

2009-12-21  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/raw_mon : 64 bit clean?
	* src/wdisk : 64 bit clean?
	* 2nd arg of shmat() : (void *)0

2009-12-18  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/order : 64 bit clean?
	* time(0) --> time(NULL)
	* 65536 --> WIN_CHMAX

2009-12-16  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* MF head. Just imported the following sources.
	* src/winrandsimu6.c : added WIN random simulater, real-time version.
	* src/select_bylatlon.c : added.
	* Version 2.0.7 released.

2009-08-26  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/shmdump : avoid stack memory overflow. (exp. MacOSX, OBS266)

2009-08-01  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/winadd : 64 bit clean?
	* src/evdetect.c : added. Another version of event detect.
	* Version 2.0.6 released.
