@@ -1,4 +1,8 @@
- $Id: ChangeLog,v 1.131.2.25.2.38 2010/02/03 10:09:22 uehira Exp $
+ $Id: ChangeLog,v 1.131.2.25.2.39 2010/02/16 10:24:42 uehira Exp $
+
+2010-02-16  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
+	* src/wtape.c : 64 bit clean?
+	* src/setexb.c : 64 bit clean?
 
 2010-02-03  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
 	* configure.in : check sys/mtio.h (for fromtape, rtape, wtape).
